<resources>
    <string name="app_name">a-n-nursery-app</string>
    <string name="welcome_back">Welcome  /nBack</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="net_sales">NET SALES</string>
    <string name="transactions">TRANSACTIONS</string>
    <string name="product_sold">PRODUCT SOLD</string>
    <string name="sales_today">SALES TODAY VS YESTERDAY</string>
    <string name="top_categories">TOP CATEGORIES</string>
    <string name="gross_profit_margin">GROSS PROFIT MARGIN</string>
    <string name="_9089_43">$9089.43</string>
    <string name="gross_profit">GROSS PROFIT</string>
    <string name="_405_22">$405.22</string>
    <string name="_60">60</string>
    <string name="_48">48</string>
    <string name="_79_9">79.9%</string>
    <string name="_22">22</string>
    <string name="low_inventory_prod">LOW INVENTORY PROD.</string>
    <string name="leaf_stroke">Leaf Stroke</string>
    <string name="fab">FAB</string>
    <string name="leaf_view">Leaf View</string>
    <string name="welcome_nback">Welcome Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="reset">RESET</string>
    <string name="profile">Profile</string>
    <string name="company_info">Company Info</string>
    <string name="access_control">Access Control</string>
    <string name="advanced">Advanced</string>
    <string name="logout">Logout</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="price_change_text">The New Price change of the Fuel Price 89%</string>
    <string name="update">Update</string>
    <string name="inventory">Inventory</string>
    <string name="dashboard">Dashboard</string>
    <string name="vendor">Vendor</string>
    <string name="info">Info</string>
    <string name="settings">Settings</string>
    <string name="add_inventory">add inventory</string>
    <string name="v1_0_1">v1.0.1</string>
    <string name="y">y</string>
    <string name="yemen_beverage_supplies">Yemen Beverage Supplies</string>
    <string name="cart">cart</string>
    <string name="yemen_beverages_supplies">Yemen Beverages Supplies</string>
    <string name="variant">Variant</string>
    <string name="lot">Lot</string>
    <string name="qty_in_stock">Qty in Stock</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="block_10">Block 10</string>
    <string name="lagos">Lagos</string>
    <string name="_12_items">12 items</string>
    <string name="_40">$40</string>
    <string name="kainji">Kainji</string>
    <string name="_289_8">$289.8</string>
    <string name="product">Product</string>
    <string name="cost">Cost</string>
    <string name="save">Save</string>
    <string name="business_name">Business Name</string>
    <string name="address">Address</string>
    <string name="business_type">Business Type</string>
    <string name="time_zone">Time Zone</string>
    <string name="fruits">Fruits</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="edit_category">Edit Category</string>
    <string name="add_category">Add Category</string>
    <string name="add_categories">Add Categories</string>
    <string name="description">Description</string>
    <string name="_55">$55</string>
    <string name="blue">Blue</string>
    <string name="annual">Annual</string>
    <string name="edit">EDIT</string>
    <string name="plants">PLANTS</string>
    <string name="location_1">Location 1</string>
    <string name="location_2">Location 2</string>
    <string name="botanical_name">Botanical Name</string>
    <string name="classification">Classification</string>
    <string name="color">Color</string>
    <string name="plants_chips">Plants</string>
    <string name="trees">Trees</string>
    <string name="size">Size</string>
    <string name="notifications">Notifications</string>
    <string name="bulk_materials">Bulk Materials</string>
    <string name="pottery_materials">Pottery Materials</string>
    <string name="landscape_supply">Landscape Supply</string>
    <string name="sod">SOD</string>
    <string name="bagged_materials">Bagged Materials</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="company">Company</string>
    <string name="add_vendor">Add Vendor</string>
    <string name="business_information">Business Information</string>
    <string name="type">Type</string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="quantity">Quantity</string>
    <string name="priceColon">Price:</string>
    <string name="bermuda_tif_419_sod">Bermuda Tif 419 Sod</string>
    <string name="all">All</string>
    <string name="landscape">Landscape</string>
    <string name="pottery">Pottery</string>
    <string name="bulk">Bulk</string>
    <string name="bagged">Bagged</string>
    <string name="no_results_found_for_this_query">No results found for this Query</string>
    <string name="retry">RETRY</string>
    <string name="vendors_not_loaded">Vendors not loaded</string>
    <string name="sales">Sales</string>
    <string name="scanned_item">Scanned Item</string>
    <string name="yucca_red_snapdragon">Yucca Red-Snapdragon</string>
    <string name="_2_inches">2 inches</string>
    <string name="_6_78">$6.78</string>
    <string name="place_your_order">Place your Order</string>
    <string name="ship_to">Shop to</string>
    <string name="edit_product">Edit Product</string>
    <string name="check_inventory">Check Inventory</string>
    <string name="now_you_can_order_for_fresh_seedlings_you_can_get_it_as_fast_as_possible">Now you can order for fresh seedlings, you can get it as fast as possible.</string>
    <string name="skip">Skip</string>
    <string name="access_your_daily_data">Access your Daily Data</string>
    <string name="order_for_fresh_plants">Order for Fresh Plants</string>
    <string name="_0">$0</string>
    <string name="_0number">0</string>
    <string name="_0percent">0%</string>
    <string name="_">%</string>
    <string name="add">Add</string>
    <string name="perennials">Perennials</string>
    <string name="add_location">add location</string>
    <string name="add_lot">add lot</string>
    <string name="new_category">New Category</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="new_location">New Location</string>
    <string name="new_lot">New Lot</string>
    <string name="new_classification">New Classification</string>
    <string name="edit_lot">Edit Lot</string>
    <string name="edit_classification">Edit Classification</string>
    <string name="edit_location">Edit Location</string>
    <string name="lot_fab">Lot Fab</string>
    <string name="download_barcode">Download Barcode</string>
    <string name="invited_users_not_loaded">Invited Users not loaded</string>
    <string name="balance">Balance</string>
    <string name="barcode">Barcode</string>
    <string name="dollar">$</string>
    <string name="terminal">terminal</string>
    <string name="activity">Activity</string>


</resources>