<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".onboarding.First_Screen">


        <TextView
            android:id="@+id/check_inventory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="132dp"
            android:text="@string/check_inventory"
            android:textColor="@color/primary_color"
            android:textSize="31sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/check_inventory_note"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/now_you_can_order_for_fresh_seedlings_you_can_get_it_as_fast_as_possible"
            android:textColor="@color/primary_color"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.222"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/check_inventory" />

        <ImageView
            android:id="@+id/check_inventory_image"
            android:layout_width="match_parent"
            android:layout_height="245dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:contentDescription="@string/check_inventory"
            android:src="@drawable/first_onboard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.555"
            tools:layout_editor_absoluteX="14dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="28dp"
            android:src="@drawable/ic_arrow"
            app:fabSize="auto"
            app:fabCustomSize="60dp"
            app:maxImageSize="30dp"
            android:backgroundTint="#274E24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/fab" />

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="28dp"
            android:text="@string/skip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>